{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 198,
  "lineage": "517e235c-5c00-63bb-0760-c106bf11dbe4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:vpc/vpc-07498160",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a25748cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0197cd65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07498160",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-dad78dbd",
            "owner_id": "363747985912"
          }
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:loadbalancer/app/legendary-spoon-lb/5442ffb51e3b0809",
            "arn_suffix": "app/legendary-spoon-lb/5442ffb51e3b0809",
            "desync_mitigation_mode": "defensive",
            "dns_name": "legendary-spoon-lb-1981506042.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:loadbalancer/app/legendary-spoon-lb/5442ffb51e3b0809",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "legendary-spoon-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0047941f337d64b04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-3f021667"
              },
              {
                "subnet_id": "subnet-44e5320d"
              },
              {
                "subnet_id": "subnet-a17cb5c6"
              }
            ],
            "subnets": [
              "subnet-3f021667",
              "subnet-44e5320d",
              "subnet-a17cb5c6"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-07498160",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_subnets.subnet",
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:listener/app/legendary-spoon-lb/5442ffb51e3b0809/c0f365c3b66131cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:targetgroup/legendary-spoon-lb-target-group/4fec118973a01922",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:listener/app/legendary-spoon-lb/5442ffb51e3b0809/c0f365c3b66131cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:loadbalancer/app/legendary-spoon-lb/5442ffb51e3b0809",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.subnet",
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_lb.this",
            "module.ecs_fargate_app.aws_lb_target_group.this",
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:listener/app/legendary-spoon-lb/5442ffb51e3b0809/a23c12ae4cc1b6ce",
            "certificate_arn": "arn:aws:acm:eu-west-1:363747985912:certificate/17713c71-eb29-45a3-a668-f016c1beedb8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:targetgroup/legendary-spoon-lb-target-group/4fec118973a01922",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:listener/app/legendary-spoon-lb/5442ffb51e3b0809/a23c12ae4cc1b6ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:loadbalancer/app/legendary-spoon-lb/5442ffb51e3b0809",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.subnet",
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_lb.this",
            "module.ecs_fargate_app.aws_lb_target_group.this",
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:targetgroup/legendary-spoon-lb-target-group/4fec118973a01922",
            "arn_suffix": "targetgroup/legendary-spoon-lb-target-group/4fec118973a01922",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:363747985912:targetgroup/legendary-spoon-lb-target-group/4fec118973a01922",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "legendary-spoon-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07498160"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group/sg-0047941f337d64b04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule to egress traffic, allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0047941f337d64b04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule to ingress traffic, allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "legendary-spoon-lb-sg",
            "name_prefix": "",
            "owner_id": "363747985912",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07498160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group/sg-0e1f28cbfeb825e7c",
            "description": "Security group for legendary-spoon instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for legendary-spoon egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1f28cbfeb825e7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for legendary-spoon ingress",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "legendary-spoon-sg",
            "name_prefix": "",
            "owner_id": "363747985912",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07498160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group-rule/sgr-0df615cb1a87ea1de",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Rule for legendary-spoon egress",
            "from_port": -1,
            "id": "sgr-0df615cb1a87ea1de",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e1f28cbfeb825e7c",
            "security_group_rule_id": "sgr-0df615cb1a87ea1de",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb_allow_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group-rule/sgr-002a5ae2d009eac37",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Rule to egress traffic, allow all",
            "from_port": -1,
            "id": "sgr-002a5ae2d009eac37",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0047941f337d64b04",
            "security_group_rule_id": "sgr-002a5ae2d009eac37",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group-rule/sgr-076f77026d3643d9a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Rule for legendary-spoon ingress",
            "from_port": 8000,
            "id": "sgr-076f77026d3643d9a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e1f28cbfeb825e7c",
            "security_group_rule_id": "sgr-076f77026d3643d9a",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group-rule/sgr-0c29cc68c8d30a845",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Rule to ingress traffic, allow port 80",
            "from_port": 80,
            "id": "sgr-0c29cc68c8d30a845",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0047941f337d64b04",
            "security_group_rule_id": "sgr-0c29cc68c8d30a845",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_app",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:363747985912:security-group-rule/sgr-0940e412474fefc34",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Rule to ingress traffic, allow port 443",
            "from_port": 443,
            "id": "sgr-0940e412474fefc34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0047941f337d64b04",
            "security_group_rule_id": "sgr-0940e412474fefc34",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_fargate_app.aws_security_group.lb_sg"
          ]
        }
      ]
    }
  ]
}